kubernetes/04-queue/config/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-service
  namespace: codehunters
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-service
  template:
    metadata:
      labels:
        app: events-service
    spec:
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: secret-provider-events-service # SecretProviderClass name
      containers:
        - name: events-service
          volumeMounts:
            - name: secrets-store-inline
              mountPath: /mnt/secrets-store
              readOnly: true
          imagePullPolicy: Always
          image: codehunterstrainingacr.azurecr.io/events-service:czirjak
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "300Mi"
              cpu: "250m"
            limits:
              memory: "500Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 3
            failureThreshold: 3
